src/test/deca/context/invalid/created/literalBoolPrint.deca
// Description :
// print de bools
// Resultat :
// truefalse
//

{
    print(true);
    println(false);
}
